Page Queries with variables and ENV file created for API key

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "contentful": "^8.1.7",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^3.9.0",
+    "gatsby-source-contentful": "^4.6.1",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "react": "^16.12.0",
